# vopencl

./: README.md  make-and-install-all.sh
agent/: .gitignore  Makefile.in  configure  configure.ac
agent/src/: Makefile.am  Makefile.in  agent.c  agent.h  agent_opencl.h  consumer.c  consumer.h  consumer_handler.c  device.c  device.h  forward.c  id.c  loadbalancer.c  main.c  object.c  object.h  opencl_cmdqueue.c  opencl_context.c  opencl_device.c  opencl_event.c  opencl_kernel.c  opencl_memobj.c  opencl_object.c  opencl_platform.c  opencl_program.c  platform.c  platform.h  provider.c  provider.h  provider_handler.c  remote.c  reverseproxy.c
common/: alloc.c  api.c  aux.c  block.c  lock.c  map.c  net.c  rpc_client.c  rpc_server.c  set.c  stream.c
consumer/: .gitignore  configure  configure.ac
consumer/src/: Makefile.am  Makefile.in  consumer.c  consumer.h  opencl_cmdqueue.c  opencl_context.c  opencl_device.c  opencl_event.c  opencl_image.c  opencl_kernel.c  opencl_memobj.c  opencl_platform.c  opencl_program.c  opencl_sampler.c
consumer/src/include/: Makefile.am  Makefile.in
consumer/src/include/CL/: cl.h
include/: api.h  clara.h  debug.h  lock.h  message.h  ndebug.h  set.h
provider/: .gitignore  configure  configure.ac
provider/src/: Makefile.am  Makefile.in  device.h  opencl_cmdqueue.c  opencl_context.c  opencl_device.c  opencl_event.c  opencl_kernel.c  opencl_memobj.c  opencl_program.c  platform.h  provider.c  provider.h  provider_device.c  provider_opencl.h  query.c
