AM_CFLAGS = -I../../include
bin_PROGRAMS = clarad
clarad_SOURCES = \
	main.c \
	agent.c \
	platform.c \
	device.c \
	id.c \
	provider.c \
	consumer.c \
	object.c \
	remote.c \
	forward.c \
	provider_handler.c \
	consumer_handler.c \
	loadbalancer.c \
	reverseproxy.c \
	opencl_object.c \
	opencl_platform.c \
	opencl_device.c \
	opencl_context.c \
	opencl_cmdqueue.c \
	opencl_memobj.c \
	opencl_program.c \
	opencl_kernel.c \
	opencl_event.c \
	../../common/aux.c \
	../../common/net.c \
	../../common/block.c \
	../../common/stream.c \
	../../common/api.c \
	../../common/rpc_client.c \
	../../common/rpc_server.c \
	../../common/alloc.c \
	../../common/rb.c \
	../../common/set.c \
	../../common/lock.c

run:
	./$(bin_PROGRAMS)
